# ethstaker-deposit-cli

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  deposit.sh  existing_mnemonic.html  exit_transaction_keystore.html  exit_transaction_mnemonic.html  generate_bls_to_execution_change.html  index.html  landing.html  local_development.html  new_mnemonic.html  partial_deposit.html  print.html  pyproject.toml  quick_setup.html  requirements.txt  requirements_test.in  requirements_test.txt  searchindex.js  searchindex.json  setup.py  test_binary_btec_script.py  test_binary_deposit_script.py  test_btec_script.py  test_deposit_script.py
.circleci/: config.yml
.github/workflows/: build.yml  comment.yml  docker.yml  docs.yml  gh-pages.yml  run-tests.yml  runner.yml
build_configs/common/: requirements.txt
build_configs/linux/: build.spec
build_configs/macos/: build.spec
build_configs/windows/: build.spec  requirements.in  requirements.txt
docs/: book.toml
docs/source/: conf.py  existing_mnemonic.rst  faq.rst  generate_bls_to_execution_change.rst  index.rst  installation.rst  introduction.rst  new_mnemonic.rst  usage.rst
docs/src/: README.md  SUMMARY.md  bls_to_execution_change_file.md  deposit_data_file.md  existing_mnemonic.md  exit_transaction_keystore.md  exit_transaction_mnemonic.md  generate_bls_to_execution_change.md  generate_bls_to_execution_change_keystore.md  landing.md  local_development.md  new_mnemonic.md  partial_deposit.md  quick_setup.md  release_process.md
ethstaker_deposit/: bls_to_execution_change_keystore.py  credentials.py  deposit.py  exit_transaction.py  settings.py
ethstaker_deposit/cli/: existing_mnemonic.py  exit_transaction_keystore.py  exit_transaction_mnemonic.py  generate_bls_to_execution_change.py  generate_bls_to_execution_change_keystore.py  generate_keys.py  new_mnemonic.py  partial_deposit.py  test_keystore.py
ethstaker_deposit/key_handling/: keystore.py
ethstaker_deposit/utils/: click.py  constants.py  deposit.py  exit_transaction.py  intl.py  ssz.py  terminal.py  validation.py
staking_deposit/: __main__.py  credentials.py  deposit.py  exit_transaction.py  settings.py
staking_deposit/cli/: exit_transaction_keystore.py  exit_transaction_mnemonic.py  generate_bls_to_execution_change.py  generate_keys.py  new_mnemonic.py
staking_deposit/key_handling/: keystore.py
staking_deposit/utils/: click.py  intl.py  (+2 more)
tests/: test_credentials.py  test_deposit.py
(+37 files in other folders)
