[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ethstaker_deposit"]

[project]
name = "ethstaker_deposit"
version = "0.1.3"
description = "Secure key generation for deposits"
readme = "README.md"
dependencies = [
    "click",
    "eth-typing",
    "eth-utils",
    "pycryptodome",
    "py-ecc",
    "ssz"
]
requires-python = ">=3.9,<4"

[project.optional-dependencies]
test = [
    "flake8",
    "jsonschema",
    "mypy",
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
deposit = "ethstaker_deposit.deposit:run"

[project.urls]
"Homepage" = "https://github.com/eth-educators/ethstaker-deposit-cli"
