[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ethstaker_deposit"]

[tool.pip-tools]
generate-hashes = true
no-annotate = true

[project]
name = "ethstaker_deposit"
version = "0.1.3"
description = "Secure key generation for deposits"
readme = "README.md"
dependencies = [
    "click",
    "eth-typing",
    "eth-utils",
    "pycryptodome",
    "py-ecc",
    "ssz"
]
requires-python = ">=3.9,<4"

[project.optional-dependencies]
test = [
    "colorama", # pip-compile did not pick up from mypy
    "exceptiongroup", # pip-compile did not pick up from mypy
    "flake8",
    "jsonschema",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "tomli" # pip-compile did not pick up from mypy
]

[project.urls]
"Homepage" = "https://github.com/eth-educators/ethstaker-deposit-cli"
